# TrackIQ

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONCEPTS.md  FULL_APP_FEATURE_VIEW.md  LICENSE  Makefile  README.md  TODO.md  autoperfpy_cli  config.yaml  dashboard.py  debug_charts.py  debug_full_report.py  index.html  launch_dashboard.py  pyproject.toml  pytest.ini  requirements.txt  sample_report.html  setup.py  test_distributed_validator_simple.py  test_html_report.py  trackiq-case-study.html
.github/workflows/: deploy.yml  lint.yml  security.yml  test.yml
.trackiq/baselines/: my_baseline.json
artifacts/reports/: FULL_APP_FEATURE_VIEW.md  autoperfpy_bench_inference.json  autoperfpy_bench_inference_report.html  autoperfpy_bench_inference_report_data.json  autoperfpy_ui_report_data.csv  autoperfpy_ui_report_data.json  minicluster_fault_timeline_report.html  minicluster_heatmap_report.html
artifacts/ui_png/: README.md
autoperf_app/: __init__.py
autoperf_app/reports/: charts.py
autoperfpy/: __init__.py  auto_runner.py  cli.py  device_config.py
autoperfpy/analyzers/: __init__.py  dnn_pipeline.py  latency.py  tegrastats.py
autoperfpy/benchmarks/: __init__.py  latency.py  vllm_bench.py
autoperfpy/cli/: utils.py
autoperfpy/collectors/: __init__.py  base.py  nvml_collector.py  psutil_collector.py  synthetic.py  tegrastats_collector.py
autoperfpy/commands/: __init__.py  analyze.py  benchmark.py  compare.py  monitor.py  report.py  run.py  ui.py
autoperfpy/config/: __init__.py  config.py  defaults.py
autoperfpy/core/: __init__.py  base.py  dnn_pipeline.py  regression.py  tegrastats.py  utils.py
autoperfpy/examples/: collector_demo.py
autoperfpy/monitoring/: __init__.py  _gpu_common.py  gpu.py
autoperfpy/profiles/: __init__.py  profiles.py
autoperfpy/reporting/: __init__.py  html_generator.py  visualizer.py
autoperfpy/reports/: __init__.py  charts.py  export_csv.py  html_generator.py  pdf_generator.py  plotly_report.py  report_builder.py  visualizer.py
autoperfpy/runners/: __init__.py  runner.py
autoperfpy/ui/: __init__.py  dashboard.py  streamlit_app.py
benchmarks/: batching_tradeoff.py  llm_latency_benchmark.py
docs/: README.md
examples/: analyze_percentiles.py  benchmark_batching.py  collect_synthetic_metrics.py  generate_interactive_html_report.py  generate_performance_report.py  monitor_gpu.py  regression_detection_example.py
minicluster/: README.md  __init__.py  __main__.py  cli.py  deps.py
minicluster/benchmarks/: __init__.py  collective_bench.py
minicluster/monitor/: README.md  __init__.py  anomaly_detector.py  cli.py  health_reader.py  health_reporter.py  live_dashboard.py
minicluster/reporting/: __init__.py  html_reporter.py  plotly_report.py
minicluster/runner/: __init__.py  distributed_runner.py  workloads.py
minicluster/tests/: __init__.py  test_cli.py  test_collective_bench.py  test_correctness_validator.py  test_distributed_runner.py  test_fault_injector.py  test_health_monitor_integration.py  test_html_reporter.py  test_monitor.py  test_plotly_report.py  test_workloads.py
minicluster/ui/: __init__.py  dashboard.py  launcher.py  streamlit_app.py
minicluster/validators/: __init__.py  correctness_validator.py  fault_injector.py
monitoring/: gpu_monitor.py
montoring/: gpu_monitor.py  llm_monitor.py
output/: README.md  sample_report.csv  sample_report.html  sample_report.json
python/: automotive_parser_log.py  calculate_p99_latency.py  hello.py  parse-automotive-logs.py  practice.py
scripts/: automotive_parser_log.py  calculate_p99_latency.py  generate_performance_graphs.py  practice.py  pytorch_operations.py  tensorrt_llm_interface.py
scripts/data/: automotive_benchmark_data.csv  demo_benchmark.csv  report_test.csv
slurm/: README.md  submit_bench_collective.sh  submit_minicluster.sh
tests/: __init__.py  conftest.py  test_analyze_json_input.py  test_analyzers.py  test_benchmarks.py  test_cli_help_profiles.py  test_cli_report_input_compat.py  test_cli_report_multi_run_html.py  test_cli_report_pdf_multi_run.py  test_cli_report_plotly_inference.py  test_cli_versions.py  test_core.py  test_distributed_validator.py  test_dnn_pipeline.py  test_e2e_cli_workflows.py  test_efficiency.py  test_hardware_multiplatform.py  test_html_generator.py  test_integration.py  test_launch_dashboard.py  test_minicluster_streamlit_app.py  test_pdf_report_consistency.py  test_power_profiler.py  test_precision_expansion.py  test_report_builder.py  test_report_csv_export_power_profile.py  test_streamlit_precision_selection.py  test_streamlit_style_templates.py  test_tegrastats.py  test_tool_dashboards.py  test_tool_output_contract_fixtures.py  test_trackiq_collectors.py  test_trackiq_compare.py  test_trackiq_compare_html_reporter.py  test_trackiq_config.py  test_trackiq_core_streamlit_app.py  test_trackiq_result_schema.py  test_trackiq_ui.py  test_variability.py  test_vllm_bench.py
tmp_external_import_check/: check_import.py  check_import_installed.py
tools/: detect_hung_proc.sh  llm_memory_calculator.py  precision-loader.py  process_monitor.py  service_benchmarks.py  tensorrt_build.sh
trackiq/: __init__.py  __init___commit1.py
trackiq/analyzers/: __init__.py  efficiency.py  variability.py
trackiq/collectors/: __init__.py  base.py  nvml_collector.py  psutil_collector.py  synthetic.py
trackiq/compare/: __init__.py
trackiq/config/: __init__.py  config.py
trackiq/core/: __init__.py  base.py  regression.py  utils.py
trackiq/hardware/: __init__.py  gpu_common.py
trackiq/platform/: __init__.py  devices.py
trackiq/profiles/: __init__.py  profiles.py
trackiq/reporting/: __init__.py  charts.py  html_generator.py  pdf_generator.py  visualizer.py
trackiq/results/: __init__.py
trackiq/runner/: __init__.py  runner.py
trackiq_compare/: README.md  __init__.py  __main__.py  cli.py  deps.py
trackiq_compare/comparator/: __init__.py  metric_comparator.py  (+1 more)
trackiq_core/: __init__.py  config_io.py  dict_utils.py  distributed_validator.py  power_profiler.py  schema.py  serializer.py  validator.py
(+75 files in other folders)
