[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoperfpy"
version = "1.0"
description = "Performance analysis and benchmarking toolkit for NVIDIA GPU platforms and LLM workloads"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hamna Nimra" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Performance/Monitoring",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [

    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "pyyaml>=5.3.0",
    "requests>=2.25.0",
    "nvidia-ml-py",
    "networkx",
    "matplotlib",
    "plotly",
    "streamlit>=1.20.0",
    "torch",
]

[project.urls]
Homepage = "https://github.com/HamnaNimra/AutoPerfPy"
Repository = "https://github.com/HamnaNimra/AutoPerfPy"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "pytest-mock>=3.6.0",
    "black>=21.0",
    "flake8>=3.9",
    "isort>=5.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "pytest-mock>=3.6.0",
]

[project.scripts]
autoperfpy = "autoperfpy.cli:main"
trackiq-compare = "trackiq_compare.cli:main"

[tool.setuptools.packages.find]
include = ["trackiq_core*", "autoperfpy*", "trackiq_compare*", "minicluster*"]

[tool.setuptools.package-dir]
"" = "."
