[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoperfpy"
version = "1.0.0"
description = "Performance analysis and benchmarking toolkit for NVIDIA GPU platforms and LLM workloads"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hamna Nimra" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Performance/Monitoring",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "nvidia-ml-py>=12.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.0.0",
    "streamlit>=1.30.0",
    "torch>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/HamnaNimra/trackiq"
Repository = "https://github.com/HamnaNimra/trackiq"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.6.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
minicluster = "minicluster.cli:main"
autoperfpy = "autoperfpy.cli:main"
trackiq-compare = "trackiq_compare.cli:main"
trackiq_compare = "trackiq_compare.cli:main"

[tool.setuptools.packages.find]
include = ["trackiq_core*", "autoperfpy*", "trackiq_compare*", "minicluster*"]

[tool.setuptools.package-dir]
"" = "."
